Change colour on mid slides, fade out author box on them
Signed-off-by: Toke Høiland-Jørgensen <toke@toke.dk>

--- a/conference/LinuxPlumbers2018/reveal.js/css/theme/redhat.css
+++ b/conference/LinuxPlumbers2018/reveal.js/css/theme/redhat.css
@@ -89,6 +89,11 @@ body {
   background-image: url('../../images/mid-slide-bg.png');
   padding-top: 8em;
   padding-left: 3em;
+  color: #eee8d5;
+}
+
+.reveal .slides > section > section.mid-slide .authorbox {
+  opacity: .5;
 }
 
 .reveal .title {
