Remove custom.css
Since we have our own theme now, we can just put customisations there

Move the last customisation (text align).

Signed-off-by: Toke Høiland-Jørgensen <toke@toke.dk>

--- a/conference/LinuxPlumbers2018/reveal.js/css/theme/redhat.css
+++ b/conference/LinuxPlumbers2018/reveal.js/css/theme/redhat.css
@@ -41,6 +41,7 @@ body {
   height: 100%;
   font-weight: inherit;
   box-sizing: border-box;
+  text-align: left;
 }
 
 .reveal .slides .authorbox {
