CSS style for code box, try to use unit size "em"
The "em" unit is "Relative to the font-size of the element".

Changed this to 27em, but HTML display max 23 lines not 27 lines,
I guess i might have misunderstood that "em" means.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/reveal.js/css/theme/redhat.css
+++ b/conference/LinuxPlumbers2018/reveal.js/css/theme/redhat.css
@@ -262,7 +262,7 @@ body {
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 590px;
+  max-height: 27em; /* Relative to font-size of element, but gives 23 lines */
   word-wrap: normal; }
 
 .reveal table {
