--- a/conference/NetDevConf2019-0x13/reveal.js/css/theme/redhat.css
+++ b/conference/NetDevConf2019-0x13/reveal.js/css/theme/redhat.css
@@ -249,11 +249,10 @@ body {
   width: 90%;
   margin: 20px auto;
   text-align: left;
-  font-size: 0.55em;
+  font-size: 0.6em;
   font-family: monospace;
   line-height: 1.2em;
-  word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+  word-wrap: break-word;}
 
 .reveal code {
   font-family: monospace; }
