conference/Netconf2019: Javascript to pick up authors and title from HTML
This relieves us from having to create new .js files for every preso.

Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/NetConf2019/reveal.js/css/theme/redhat.css
+++ b/conference/NetConf2019/reveal.js/css/theme/redhat.css
@@ -75,6 +75,19 @@ body {
     box-shadow: none;
 }
 
+.reveal .slides .authorbox .title {
+  margin-left: 2em;
+}
+
+.reveal .slides .authorbox .authors {
+  margin-left: 1.5em;
+  font-size: 90%;
+}
+.reveal .slides .authorbox .authors:before {
+  content: "-";
+  margin-right: 1.5em;
+}
+
 
 .reveal .slides > section > section  {
   background-image: url('../../images/slide-bg.png');
