conference: Add CSS rule to colour Linaro logo white on the red slides
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/reveal.js/css/reveal.css
+++ b/conference/reveal.js/css/reveal.css
@@ -1385,3 +1385,8 @@ body {
   visibility: hidden; }
 
 #extra-logos {display: none;}
+
+#sec-title-slide img.linaro-logo,
+.mid-slide img.linaro-logo {
+  filter: grayscale(100%) brightness(200%);
+}
