--- a/styles/bigblow/css/bigblow.css
+++ b/styles/bigblow/css/bigblow.css
@@ -88,7 +88,7 @@ html, body {
     background-color: #FFFFFF;
     font-size: 100%;
     margin: 0 auto;
-    max-width: 810px;
+    max-width: 950px;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0px 10px 2px 10px;
@@ -109,7 +109,7 @@ html, body {
 
 body {
     color: #333333;
-    font: 13px/1.385 arial,helvetica,clean,sans-serif;
+    font: 16px/1.385 arial,helvetica,clean,sans-serif;
     margin: 0 .1em;
     padding: 0;
 }
@@ -181,7 +181,9 @@ h6 {
 
 .outline-text-2, .outline-text-3, .outline-text-4, .outline-text-5,
 .outline-3 > ul, /* for HTML export of Beamer slides */
-.outline-4 > ol, #text-footnotes {
+.outline-4 > ol,
+.outline-4 > ul,
+#text-footnotes {
     margin-left: 100px;
 }
 
@@ -452,13 +454,13 @@ img {
     color: #55BA80;
 }
 
-.SDAY, .SOMEDAY, .DFRD, .DEFERRED {
+.SDAY, .SOMEDAY, .DFRD, .DEFERRED, .NEXT {
     background-color: #D3EEFF;
     border: 1px solid #42B5FF;
     color: #42B5FF;
 }
 
-.DONE, .CANX, .CANCELED {
+.DONE, .CANX, .CANCELED, .CANCELLED {
     background-color: #F2F2EE;
     border: 1px solid #969696;
     color: #969696;
@@ -541,7 +543,7 @@ span.todo .selected {
     background-color: #DFFFDF;
 }
 
-.matchSDAY, .matchDFRD {
+.matchSDAY, .matchDFRD, .matchNEXT {
     background-color: #E0EFFF;
 }
 
@@ -611,6 +613,10 @@ span.todo .selected {
             text-decoration: underline;
         }
 
+#table-of-contents .todo,
+#table-of-contents .done {
+    display: none;
+}
 #minitoc {
     background-color: #FFFFDD;
     border: 1px solid #E4E4E4;
@@ -624,7 +630,7 @@ span.todo .selected {
 
 #minitoc a {
     display: block;
-    font-size: 10px;
+    font-size: 90%;
     font-weight: normal;
 }
 
@@ -639,7 +645,7 @@ span.todo .selected {
 #minitoc h2 {
     margin: 3px 0px;
     border: none;
-    font-size: 11px;
+    font-size: 95%;
 }
 
 p.verse {
@@ -658,24 +664,22 @@ p.verse {
     color: #FF0000;
 }
 
-#toTop {
+#top-link {
     background: #F7F7F7;
     border: 1px solid #CCCCCC;
     top: 10px;                          /* together with this to put the div at the top */
     color: #333333;
     cursor: pointer;
-    display: none;
+    display: block;
     font-family: verdana;
-    font-size: 11px;
+    font-size: 95%;
     padding: 5px;
     position: fixed;                    /* this is the magic */
     right: 10px;
     text-align: center;
-    width: 100px;
-    z-index: 999;
 }
 
-    #toTop:hover {
+    #top-link:hover {
         text-decoration: underline;
     }
 
