conference/reveal.js/redhat.css: Also apply img-slide class to h2
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/reveal.js/css/theme/redhat.css
+++ b/conference/reveal.js/css/theme/redhat.css
@@ -173,7 +173,8 @@ body {
 .reveal h1 {
   text-shadow: none; }
 
-.reveal .img-slide h3 {
+.reveal .img-slide h3,
+.reveal .img-slide h2 {
     position: absolute;
     top: .2em;
     right: 1em;
