conference/css: Add 'big' and 'center-text' classes
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/reveal.js/css/theme/redhat.css
+++ b/conference/reveal.js/css/theme/redhat.css
@@ -385,6 +385,13 @@ body {
 .reveal .figure-number {
   display: none; }
 
+.reveal .center-text {
+  text-align: center;
+}
+.reveal .big {
+  font-size: 200%;
+}
+
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
