--- a/conference/reveal.js/css/theme/redhat.css
+++ b/conference/reveal.js/css/theme/redhat.css
@@ -392,6 +392,20 @@ body {
   font-size: 200%;
 }
 
+.reveal #title-img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+  z-index: 255;
+}
+
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
