--- a/conference/reveal.js/css/theme/white.css
+++ b/conference/reveal.js/css/theme/white.css
@@ -175,9 +175,7 @@ body {
 
 .reveal table th,
 .reveal table td {
-  text-align: left;
-  padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid; }
+  padding: 0.2em 0.5em 0.2em 0.5em;}
 
 .reveal table th[align="center"],
 .reveal table td[align="center"] {
