--- a/conference/reveal.js/css/reveal.css
+++ b/conference/reveal.js/css/reveal.css
@@ -1408,3 +1408,10 @@ body {
 .org-left {
   text-align: left;
 }
+
+.reveal .compact-table th,
+.reveal .compact-table td {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  line-height: 105%;
+}
