conference/reveal.js: Add img-slide class to the 'white' theme
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/reveal.js/css/theme/white.css
+++ b/conference/reveal.js/css/theme/white.css
@@ -204,6 +204,13 @@ body {
 .reveal small * {
   vertical-align: top; }
 
+.reveal .img-slide h3,
+.reveal .img-slide h2 {
+    position: absolute;
+    top: 0px;
+    left: .1em;
+}
+
 /*********************************************
  * LINKS
  *********************************************/
