--- a/conference/reveal.js/css/theme/white.css
+++ b/conference/reveal.js/css/theme/white.css
@@ -294,3 +294,20 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+.reveal .two-column > .figure {
+  width: 50%;
+  float: left;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.reveal .two-column > pre {
+  width: 48%;
+  margin-left: 1em;
+  float: left;
+}
+
+.figure-number {
+  display: none;
+}
