conference/reveal.js: Add twocolumn and small classes to white theme
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/reveal.js/css/theme/white.css
+++ b/conference/reveal.js/css/theme/white.css
@@ -308,6 +308,16 @@ body {
   float: left;
 }
 
+.reveal .two-column > .column {
+  width: 45%;
+  margin-left: 1em;
+  float: left;
+}
+
 .figure-number {
   display: none;
+}
+
+.small {
+  font-size: 85% !important;
 }
